2007-04-27	Richard van den Berg  <richard@vdberg.org>
	* Only use optional groups in "make check" when enabled

2006-12-19	Richard van den Berg  <richard@vdberg.org>
	* Do not warn about files not being directories

2006-12-15	Richard van den Berg  <richard@vdberg.org>
	* Released version 0.13.1
	* Changed version to post-0.13.1

2006-12-14	Richard van den Berg  <richard@vdberg.org>
	* Use lseek() instead of fseek() on aide.db

2006-12-13	Richard van den Berg  <richard@vdberg.org>
	* Work around for error while reading gzipped aide.db files

2006-12-08	Richard van den Berg  <richard@vdberg.org>
	* Removed ustat dead code

2006-12-07	Richard van den Berg  <richard@vdberg.org>
	* Released version 0.13
	* Changed version to post-0.13

2006-11-30	Richard van den Berg  <richard@vdberg.org>
	* Set meaningful exitcodes when --check is used (Pablo Virolainen)

2006-11-29	Richard van den Berg  <richard@vdberg.org>
	* Changed version to post-0.13-rc2
	* Check for WHIRLPOOL so old mhash can be used (Pablo Virolainen)

2006-11-25	Richard van den Berg  <richard@vdberg.org>
	* Fix error message about HAVAL and CRC32 with --update and gcrypt
	* Fix --with and --without logic of configure
	* Make --without switches of configure work
	* Released version 0.13-rc2

2006-11-24	Richard van den Berg  <richard@vdberg.org>
	* Remove stpcpy declaration because it is not defined in util.c
	* Fix segfault when line->cntx is NULL
	* Add --without-mhash to configure
	* Don't use DB_SELINUX and DB_XATTR when not present
	* Fix use of libgcrypt
	* Add new group 'l' to detect changed link name
	* Update documentation with new groups
	* Supply strnlen in utils.c
	* Released version 0.13-rc1

2006-11-15	Richard van den Berg  <richard@vdberg.org>
	* Fix syslog URLs (Yves Mettier <ymettier@libertysurf.fr>)

2006-10-30	Richard van den Berg  <richard@vdberg.org>
	* Make --with-selinux work without pkg-config

2006-10-27	Richard van den Berg  <richard@vdberg.org>