@@ -1,5 +1,6 @@
 2007-04-27	Richard van den Berg  <richard@vdberg.org>
 	* Only use optional groups in "make check" when enabled
+	* Prevent segfaults in db_write_byte_base64, patch from James Antill
 
 2006-12-19	Richard van den Berg  <richard@vdberg.org>
 	* Do not warn about files not being directories
